--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ travis:
             - develop
 
 install:
-            - make build 
+            - python setup.py install
 
 script:
           "echo \"TODO\""
