--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,35 @@
-language: python
-python:
-            - 2.7
+{
+"language": "python",
+"python": 2.7,
+"travis": [
+  "master"
+],
+"install": [
+  "python setup.py develop"
+],
+"script": [
+  "rundir=$HOME",
+  "cd $rundir",
+  "nosetests -v --with-coverage"
+],
+"group": "stable",
+"dist": "precise",
+"os": "linux"
+}
 
-travis: 
-            - develop
-
-install:
-            - python setup.py install
-
-script:
-          "echo \"TODO\""
-          # avoid running in the checkout directory so nose finds built modules..
-          #     - rundir=$HOME
-          #     - cd $rundir
-          #     - nosetests -v --with-coverage
+#language: python
+#python:
+#            - 2.7
+#
+#travis: 
+#            - develop
+#
+#install:
+#            - python setup.py install
+#
+#script:
+#          "echo \"TODO\""
+#          # avoid running in the checkout directory so nose finds built modules..
+#          #     - rundir=$HOME
+#          #     - cd $rundir
+#          #     - nosetests -v --with-coverage
